2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: during rebuild, don't do select change
	* src/DisplayTabs/_ButtonTab.py: avoid double call of selection_change
	* src/DisplayTabs/_GrampsTab.py: method to add db connects, and set connects
	* src/Editors/_EditPrimary.py: on add tab pass db connection method
	* src/Editors/_EditSecondary.py: on add tab pass db connection method
	* src/Editors/_EditReference.py: on add tab pass db connection method
	* src/DisplayTabs/_GalleryTab.py: use new structure to correctly update
	displaytab

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py: xml load/save not working, fixed #1319

2007-10-21 Jim Sack <jgsack@san.rr.com>
	* src/ansel_utf8.py: (see tracker issue #831) fix inoperative
	Gedcom/ANSEL input & output somewhat following pattern of robocoder
	patch, but with data corrections, additions, and testing. Rewrote code
	functions ansel_to_utf8 and utf8_to_ansel. Added note that utf8
	references (including function names) should be changed to unicode.
	(This changelog accounts for the r9227 commit)

2007-10-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: If a family changes, rebuild family backref of all 
	open editors. issue #1309, causing corrupt database.
	Also remove unneeded associations rebuild when family changes

2007-10-19  Piotr Czubaszek  <pioterus@gmail.com>
	* src/docgen/PdfDoc.py (PdfDoc.add_media_object): Missing period.

2007-10-19  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayTabs/_EmbeddedList.py:
	* src/DisplayTabs/_ButtonTab.py:
	ENTER is edit on embedded lists, issue #1296

2007-10-19  Frank S. Thomas  <frank@thomas-alfeld.de>
	* src/glade/gramps.glade: Remove extra space.

2007-10-18  Stephane Charette <stephanecharette@gmail.com>
	* configure.in: release 2.2.9, update version string to 2.2.10

2007-10-17  Stephane Charette <stephanecharette@gmail.com>